# sam3-videoseg

./: .gitignore  README.md
apps/sam3-demo-backend/: README.md  pyproject.toml  requirements.txt
apps/sam3-demo-backend/app/: __init__.py  config.py  errors.py  export_utils.py  main.py  mask_codec.py  models.py  sam3_service.py  session_store.py  storage_library.py  video_io.py
apps/sam3-demo-backend/tests/: test_export_utils.py  test_mask_codec.py  test_sam3_service.py  test_storage_library.py  test_video_policy.py
apps/sam3-demo-frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
apps/sam3-demo-frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/sam3-demo-frontend/src/components/: ErrorPanel.tsx  ExportPanel.tsx  FrameScrubber.tsx  ObjectList.tsx  PlaybackControls.tsx  PromptPanel.tsx  StoragePanel.tsx  VideoCanvas.tsx
apps/sam3-demo-frontend/src/lib/: api.ts  types.ts
docs/: demo-setup.md  production-architecture.md
upstream/sam3-original/: pyproject.toml
upstream/sam3-original/sam3/model/: sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py
